# Triton-taint-mcp

./: README.md  VULNERABILITY_WORKFLOW.md  pyproject.toml
src/triton_taint_mcp/: __init__.py  main.py  taint.py
tests/: test_taint_tool.py
